# experimental

./: .pre-commit-config.yaml  README.md
pypov/: main.py  pyproject.toml
rpov/: .aiexclude  .gitignore  Cargo.toml  GEMINI.md  check.sh  pyproject.toml  scenario-coverage.py
rpov/benches/: matrices.rs
rpov/scenarios/: 05-intersections.feature  07-world.feature  09-shapes.feature  10-patterns.feature
rpov/src/: camera.rs  canvas.rs  colors.rs  floats.rs  intersections.rs  lib.rs  lighting.rs  materials.rs  matrices.rs  normals.rs  patterns.rs  planes.rs  rays.rs  reflections.rs  shapes.rs  spheres.rs  transformations.rs  tuples.rs  world.rs
rpov/tests/: ch5-spheres.rs  ch6-light.rs  ch7-scene.rs  chapter1.rs  projectile.rs  usability.rs
rpov/tests/features/: 01-tuples.feature
