[package]
name = "rpov"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_float_eq = "1.1.4"
cargo-make = "0.37.24"
criterion = "0.7.0"
cucumber = "0.21.1"
num-traits = "0.2.19"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "matrices"
harness = false

# [lints.clippy]
# needless_range_loop = "allow"
