[package]
name = "rpov"
version = "0.1.0"
edition = "2024"

[features]
f64 = []
default = []

[dependencies]
cargo-make = "0.37.24"
criterion = "0.7.0"
derive_more = {version = "2.0.1", features = ["display"]}
indicatif = "0.17.8"
num-traits = "0.2.19"

[[bench]]
name = "matrices"
harness = false

[lints.clippy]
useless_conversion = "allow"

[lib]
doctest = false
